Version 0.6 (in development)
-----------
Command response parsing code rewritten from stratch to deal with
various bugs that surfaced when dealing with more complex responses
(eg. BODYSTRUCTURE and ENVELOPE). This change also fixes various
problems when interacting with Gmail and MS Exchange (#1).

[API CHANGE] select_folder now returns a dictionary with the full
SELECT command response instead of just the message count (#24).


Version 0.5.2
-------------
Correctly handle double quotes and backslashes in folder names when
parsing LIST and LSUB responses (#28).

Fixed problem with parsing responses where a literal followed another
literal (#33).


Version 0.5.1
-------------
Changed license from GPL to new BSD.


Version 0.5
-----------
Support for SSL based connections.

Folder names are now encoded and decoded transparently if required (using
modified UTF-7). This means that any methods that return folder names may
return unicode objects as well as normal strings [API CHANGE]. Additionally,
any method that takes a folder name now accepts unicode object too. Use the
folder_encode attribute to control whether encode/decoding is performed.

Unquoted folder names in server responses are now handled correctly. Thanks
to Neil Martinsen-Burrell for reporting this bug.

Fixed a bug with handling of unusual characters in folder names.

Timezones are now handled correctly for datetimes passed as input and for
server responses. This fixes a number of bugs with timezones. Returned
datetimes are always in the client's local timezone [API CHANGE].

Many more unit tests, some using Michael Foord's excellent mock.py.
(http://www.voidspace.org.uk/python/mock/)

